--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,18 +12,17 @@
     font-style: normal;
   }
 
-  /* Estilo inicial da página */
-  div.page {
-    opacity: 0;
-    transform: scale(0.95) translateY(20px);
-    transition: opacity 0.6s ease, transform 0.6s ease;
-  }
-  
-  /* Quando a página está ativa */
-  div.page.active {
-    opacity: 1;
-    transform: scale(1) translateY(0);
-  }
+  .fade-enter-active, .fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+.fade-enter {
+  opacity: 0;
+}
+.fade-leave-to {
+  opacity: 0;
+}
 
-  
+.html {
+    scroll-behavior: smooth;
+}
   
